examples/helloworld/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: HTTP1
          stat_prefix: ingress_http
          generate_request_id: false
          # access_log:
          # - name: envoy.access_loggers.stdout
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.golang
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
              library_id: orbproxy
              library_path: "lib/orbproxy.so"
              plugin_name: orbproxy
              plugin_config:
                "@type": type.googleapis.com/xds.type.v3.TypedStruct
                value:
                  service: ""
                  endpoint: ""
                  stream: false
                  config: '{"logger": {"level": "trace"}, "client": {"poolSize": 256, "poolHosts": 32, "middlewares": [{"name": "retry"}, {"name": "log"}]}, "registry": {"plugin": "kvstore", "kvstore": {"plugin": "natsjs", "servers": ["nats://nats:4222"]}}}'
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              # this route contains the changes, you can see we use the typed_per_filter_config here
              routes:
              - match:
                  prefix: "/hello.v1.Hello/Hello"
                non_forwarding_action: {}
                typed_per_filter_config:
                  envoy.filters.http.golang:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.ConfigsPerRoute
                    plugins_config:
                      orbproxy:
                        config:
                          "@type": type.googleapis.com/xds.type.v3.TypedStruct
                          value:
                            service: "helloworld"
                            endpoint: "/hello.v1.Hello/Hello"
                            stream: false
                            config: ''
              - match:
                  prefix: "/hello"
                direct_response:
                  status: 200
                  body:
                    inline_string: "{\"message\": \"Fake hello world!\"}"
                typed_per_filter_config:
                  envoy.filters.http.golang:
                    "@type": type.googleapis.com/envoy.config.route.v3.FilterConfig
                    disabled: true
